--- a/proj/desktop/CMakeLists.txt
+++ b/proj/desktop/CMakeLists.txt
@@ -4,10 +4,10 @@ cmake_minimum_required(VERSION 2.8.12)
 # Configure CMake
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 17)
 
 # Variable definitions
-set(ROOT_PROJ_DIR "${CMAKE_SOURCE_DIR}/../..")
+set(ROOT_PROJ_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../..")
 set(RESOURCES_DIR "${ROOT_PROJ_DIR}/res")
 
 # CXX Flags
@@ -20,13 +20,5 @@ else()
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -ansi -pedantic")
 endif()
 
-# Build game lib
-add_subdirectory("${ROOT_PROJ_DIR}/src" "${CMAKE_BINARY_DIR}/Game")
-
 # Create executable
 add_executable(Concept "main.cpp")
-
-# Link external libs
-target_link_libraries(Concept 
-    PRIVATE Game_Static
-)
